# sound-capsule

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  VALIDATION.md  WINDOWS_MIDI_SETUP.md
fl-studio/SoundCapsule/: device_SoundCapsule.py
helper/: pyproject.toml
helper/soundcapsule/: __init__.py  bridge.py  capsule.py  cli.py  compatibility.py  config.py  flp.py  library.py  project.py  project_locator.py  provision.py  renderer.py  server.py
helper/tests/: test_build_frozen_helper.py  test_config.py  test_controller_script.py  test_flp.py  test_install.py  test_library.py  test_package_release.py  test_project.py  test_provision.py  test_renderer.py  test_server.py
packaging/: LICENSE.rtf
packaging/macos/: Distribution.xml.in  Welcome.txt  bootstrap-install.sh
packaging/windows/: Package.wxs  SoundCapsule.wixproj  bootstrap-install.ps1
plugin/: CMakeLists.txt
plugin/src/: CapsulePreviewSource.cpp  CapsulePreviewSource.h  ControllerMidiEndpoint.cpp  ControllerMidiEndpoint.h  ControllerMidiEndpointManager.cpp  ControllerMidiEndpointManager.h  FlVersion.h  HelperClient.cpp  HelperClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PreviewMath.h
plugin/tests/: PreviewMathTests.cpp
scripts/: build_frozen_helper.py  frozen_helper.py  install.py  package_macos_installer.py  package_release.py  package_windows_installer.py  release_notes.py  stage_setup.py  validate_fl_corpus.py
