[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-sound-capsule"
version = "0.1.0"
description = "Event-preserving FL Studio sound capsule helper"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Sound Capsule contributors" }]
dependencies = []

[project.scripts]
soundcapsule = "soundcapsule.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["soundcapsule*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
