[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-sound-capsule"
dynamic = ["version"]
description = "Event-preserving FL Studio sound capsule helper"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [{ name = "Sound Capsule contributors" }]
dependencies = [
    "Send2Trash>=1.8,<3",
]

[project.scripts]
soundcapsule = "soundcapsule.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["soundcapsule*"]

[tool.setuptools.dynamic]
version = { attr = "soundcapsule.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
